add database, add todoactivity
category database working

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <string name="app_name">Todo Stalker</string>
+    <string name="title_activity_add_to_do">AddToDo</string>
+    <string name="action_settings">Settings</string>
+    <string name="noteText">Notes</string>
+
 </resources>
