--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,10 +5,8 @@
     <string name="title_activity_add_to_do">AddToDo</string>
     <string name="action_settings">Settings</string>
     <string name="noteText">Notes</string>
-    <string name="title_activity_home_screen">HomeScreenActivity</string>
-    <string name="dummy_button">Dummy Button</string>
-    <string name="dummy_content">DUMMY\nCONTENT</string>
-    
+    <string name="title_activity_home_screen">Welcome to TodoStalker!</string>
+    <string name="view_map_notifications">View these on Map</string>
     <string name="saveBtn">Save</string>
     <string name="pick_date">Pick a Date</string>
     <string name="cancelBtnText">Cancel</string>
@@ -18,6 +16,8 @@
     <string name="actn3">View Map</string>
     <string name="actn4">List TODOs</string>
     <string name="title_activity_list_todo">ListTodoActivity</string>
-    <string name="hello_world">Hello world!</string>
     <string name="title_activity_map_all_todos">MapAllTODOs</string>
+    <string name="title_activity_notification">TodoStalker Alerts</string>
+    
+
 </resources>
