--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,7 +8,6 @@
     <string name="title_activity_home_screen">HomeScreenActivity</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
-    
     <string name="saveBtn">Save</string>
     <string name="pick_date">Pick a Date</string>
     <string name="cancelBtnText">Cancel</string>
@@ -21,4 +20,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_map_all_todos">MapAllTODOs</string>
     <string name="placeImage">Image for the Place</string>
+    <string name="title_activity_notification">Todo Alerts</string>
+
 </resources>
