Get direction working
changed the places api key as query limit exceeded

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -21,5 +21,6 @@
     <string name="title_activity_map_all_todos">MapAllTODOs</string>
     <string name="placeImage">Image for the Place</string>
     <string name="title_activity_notification">Todo Alerts</string>
+    <string name="get_direction">Get Directions</string>
 
 </resources>
